# micro-kelvin

./: .gitignore  Cargo.toml  README.md  Vagrantfile  build.sh  i386_elf_object_disassembly.asm  i386_elf_object_strings.txt  todo.md
.cargo/: config.toml
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders
doc/: README.md  architecture.md
doc/cguide/: README.md  guide.c
src/: allocator.rs  boot.asm  gdt.rs  interrupts.rs  kernel.c  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/arch/x86/: grub.cfg
src/arch/x86_64/: kernel.c  linker.ld
src/interrupts/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
